@@ -19,7 +19,7 @@ KS300_Initialize($)
   $hash->{DefFn}     = "KS300_Define";
   $hash->{UndefFn}   = "KS300_Undef";
   $hash->{ParseFn}   = "KS300_Parse";
-  $hash->{AttrList}  = "IODev do_not_notify:0,1 showtime:0,1 model:ks300 loglevel:0,1 rainadjustment:0,1";
+  $hash->{AttrList}  = "IODev do_not_notify:0,1 showtime:0,1 model:ks300 loglevel:0,1 rainadjustment:0,1 ignore:0,1";
 }
 
 #####################################
@@ -87,6 +87,7 @@ KS300_Parse($$)
     my $def = $modules{KS300}{defptr}{$dev};
     my $haverain = 0;
     my $name= $def->{NAME};
+    return "" if(IsIgnored($name));
 
     my @v;
     my @txt = ( "rain_raw", "rain", "wind", "humidity", "temperature",
