@@ -464,3 +464,4 @@
   - my %defptr is no $modules{modname}{defptr} in order for CommandReload to
     work. There is also a second parameter $modules{modname}{ldata} which will
     be saved over a Reload, used by the FS20 for the follow feature.
+  - ignore attribute added to ignore devices of the neighbour
